tests/ui/cfg/packed_sneaky.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky.rs:8:1
  |
8 | #[hidden_repr_cfg_not_any(packed)] //~ ERROR may not be used on #[repr(packed)] types
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
